--- a/war/index.html
+++ b/war/index.html
@@ -81,7 +81,7 @@
 																		<span class="add-on"><i class="icon-time"></i></span>
 																</div>
 														</div>
-														<button class="btn btn-large btn-primary" type="submit"> 
+														<button class="btn btn-large btn-primary btn-generate-report" type="submit"> 
 																Generate report
 														</button>
 												</form>
@@ -110,6 +110,7 @@
 
 				<script src="js/jquery.js" type="text/javascript"></script>
 				<script src="js/bluecollar.js" type="text/javascript" ></script>
+				<script src="js/filemanager.js" type="text/javascript"></script>
 				<script src="js/bootstrap.min.js" type="text/javascript"></script>
 				<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 				<script src="js/bootstrap-timepicker.min.js" type="text/javascript"></script>
