--- a/war/index.html
+++ b/war/index.html
@@ -67,17 +67,17 @@
 														<h2 class="form-generate-report-heading">Select time range</h2>
 														<div>
 																<label id="label-dp-start" for="dp-start">Begin</label>
-																<input type="text" class="date-input" value="06/01/2012" id="dp-start"/>
+																<input type="text" class="date-input" value="06/01/2012" id="dp-start" readonly/>
 																<div class="input-append bootstrap-timepicker">
-																		<input type="text" id="tp-start" value="00:00"/>
+																		<input type="text" id="tp-start" value="00:00 AM" readonly/>
 																		<span class="add-on"><i class="icon-time"></i></span>
 																</div>
 														</div>
 														<div>
 																<label id="label-dp-end" for="dp-end">End</label>
-																<input type="text" class="date-input" value="06/30/2012" id="dp-end"/>
+																<input type="text" class="date-input" value="06/30/2012" id="dp-end" readonly/>
 																<div class="input-append bootstrap-timepicker">
-																		<input type="text" id="tp-end" value="00:00"/>
+																		<input type="text" id="tp-end" value="00:00 AM" readonly/>
 																		<span class="add-on"><i class="icon-time"></i></span>
 																</div>
 														</div>
@@ -111,6 +111,7 @@
 				<script src="js/jquery.js" type="text/javascript"></script>
 				<script src="js/bluecollar.js" type="text/javascript" ></script>
 				<script src="js/filemanager.js" type="text/javascript"></script>
+				<script src="js/date.js" type="text/javascript"></script>
 				<script src="js/bootstrap.min.js" type="text/javascript"></script>
 				<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 				<script src="js/bootstrap-timepicker.min.js" type="text/javascript"></script>
