--- a/war/index.html
+++ b/war/index.html
@@ -119,6 +119,7 @@
 				<script src="js/bootstrap.min.js" type="text/javascript"></script>
 				<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 				<script src="js/bootstrap-timepicker.min.js" type="text/javascript"></script>
+				<script src="js/jstz.js" type="text/javascript"></script>
 				<script src="js/init.js" type="text/javascript"></script>				
 				<script src="https://apis.google.com/js/client.js?onload=init"></script>
 		</body>
