Completed UI chages; missing some minor functionality

--- a/war/index.html
+++ b/war/index.html
@@ -31,11 +31,12 @@
 
 				<div class="container main-content">
 						<div class="navbar">
-								<div class="container">
-										<ul class="nav nav-tabs blue-collar-tabs">									
-												<li class="active blue-collar-tab"><a href="#home" data-toggle="tab">Home</a></li>
-												<li class="blue-collar-tab"><a href="#reports" data-toggle="tab">Reports</a></li>
-												<li class="blue-collar-tab dropdown">
+								<div class="navbar-inner">
+										<a class="brand" href="#">Mavicollar</a>
+										<ul class="nav">									
+												<li class="active"><a href="#home" data-toggle="tab">Home</a></li>
+												<li><a href="#reports" data-toggle="tab">Reports</a></li>
+												<li class="dropdown">
 									                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
 										                <ul class="dropdown-menu">
 											                  <li><a href="#settings-project" data-toggle="tab">Projects</a></li>
@@ -43,6 +44,7 @@
 										                </ul>
 								              	</li>
 										</ul>
+										<button class="btn btn-primary pull-right btn-sign-out">Sign out</button>
 								</div>
 						</div>
 						
