--- a/war/index.html
+++ b/war/index.html
@@ -151,11 +151,15 @@
 								</div>
 						</div>
 				</div>
+				
+				<div id="busy-indicator"></div>
 
 				<script src="js/jquery.js" type="text/javascript"></script>
 				<script src="js/bluecollar.js" type="text/javascript" ></script>
 				<script src="js/filemanager.js" type="text/javascript"></script>
 				<script src="js/date.js" type="text/javascript"></script>
+				<script src="js/spin.min.js" type="text/javascript"></script>
+				<script src="js/busy.js" type="text/javascript"></script>
 				<script src="js/bootstrap.min.js" type="text/javascript"></script>
 				<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 				<script src="js/bootstrap-timepicker.min.js" type="text/javascript"></script>
