--- a/war/index.html
+++ b/war/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 		<head>
-				<title>Bluecollar</title>
+				<title>Mavicollar</title>
 				<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<meta name="description" content="Bluecollar Login">
