[Busy] Updated busy indicator on login

--- a/war/index.html
+++ b/war/index.html
@@ -152,7 +152,7 @@
 						</div>
 				</div>
 				
-				<div id="busy-indicator"></div>
+				<div id="busy-indicator">&nbsp;</div>
 
 				<script src="js/jquery.js" type="text/javascript"></script>
 				<script src="js/bluecollar.js" type="text/javascript" ></script>
